# aus-drone

./: README.md  format.sh
src/asd_msg/: CMakeLists.txt  package.xml
src/asd_msg/msg/: controllerAxis.msg  controllerButton.msg  objectImage.msg  ultrasonic.msg
src/c2/c2/: CMakeLists.txt  package.xml
src/c2/c2/include/: joystick_mapper.hpp
src/c2/c2/launch/: c2.launch  c2nogui.launch
src/c2/c2/src/: joystick.cpp
src/c2/gui/: CMakeLists.txt  package.xml
src/c2/gui/include/: detectedobjectwindow.hpp  mainwindow.hpp
src/c2/gui/include/roslink/: roslink.hpp
src/c2/gui/src/: detectedobjectwindow.cpp  main.cpp  mainwindow.cpp
src/c2/gui/src/roslink/: roslink.cpp
src/c2/gui/ui/: detectedobjectwindow.ui  mainwindow.ui
src/c2/object_detector/: CMakeLists.txt  object_detector.py  package.xml
src/drone/camera/: CMakeLists.txt  package.xml
src/drone/camera/launch/: camera.launch
src/drone/camera/src/: camera.cpp
src/drone/drone/: CMakeLists.txt  package.xml
src/drone/drone/launch/: drone.launch  dronebase.launch  localdrone.launch
src/drone/drone/src/: calibrate.cpp  controller_node.cpp  gear_node.cpp  ultrasonic_sensor_driver.cpp
src/simulation/: flight-time.py
